src/components/AuthorTimelineView/AuthorTimelineView.module.css
.authorTimelineView {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  gap: 1em;
  height: 100%;
  padding: 4em 1em 2em 1em;
  position: relative;
}

.authorTimelineViewSettings {
  display: flex;
  flex: none;
  gap: 1em;
  flex-direction: column;
}

.authorTimelineViewAppearance {
}

.authorTimelineViewAdd {
  border: none;
  border-radius: 0;
  padding: 1em 0.5em;
}

.authorTimelineViewEntries {
  display: flex;
  flex: 1;
  flex-direction: column;
  gap: 1em;
  height: 100%;
  list-style-type: none;
  overflow-y: auto;
  position: relative;
  will-change: contents;
}

.authorTimelineViewEntry {
  align-items: center;
  display: grid;
  flex-shrink: 0;
  grid-template-columns: min-content min-content 1fr;
  gap: 0 1em;
  min-height: 100px;
}

.authorTimelineViewYear {
  align-self: flex-start;
  position: sticky;
  top: 1em;
  width: 100px;
}

.authorTimelineEventDate {
  grid-column: 1;
  padding-top: 1em;
}

.authorTimelineEntryBisector {
  border-left: 1px solid black;
  grid-column: 2;
  height: 100%;
  justify-self: center;
}

.authorTimelineViewEntryBullet {
  background-color: black;
  border-radius: 50%;
  height: 1em;
  margin-bottom: 1em;
  width: 1em;
}

.authorTimelineViewEntryDetails {
  align-self: flex-start;
  justify-self: start;
  gap: 1em;
  padding-top: 1em;
}

.authorTimelineViewEntryDetails > p {
  margin: 0;
}

.authorTimelineViewEventType {
  display: flex;
  flex-direction: column;
  position: absolute;
  right: 1em;
  top: 4em;
}

.authorTimelineViewAuthorHeader {
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 1em;
  margin-bottom: 1em !important;
}

.authorTimelineViewPortrait {
  border-radius: 50%;
  height: 3em;
  object-fit: cover;
  overflow: hidden;
  width: 3em;
}

